# opengl3dRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Assets/: lit.frag  lit.vert  quad.frag  quad.vert  unlit.frag
Assets/models/: plane.glb
include/: App.h  GameObject.h  Shader.h  Transform.h
include/App/: App.h  Camera.h  Scene.h
include/App/Editor/: Editor.h  UiManager.h
include/Core/: Camera.h  Editor.h  FontSystem.h  ProceduralGeometryGenerator.h  ProceduralMeshGenerator.h  Scene.h  SceneGraph .h  UiManager.h  Utility.h  glmDebugger.h
include/Renderer/: Curve.h  IRenderable.h  Mesh.h  Model.h  ModelLoader.h  Primitive.h  Renderer.h  ResourceManager.h  Text.h  Texture.h  Window.h
include/Renderer/Geometry/: Mesh.h  Primitive.h  ProceduralGeometryGenerator.h
include/Renderer/Resources/: ResourceManager.h
scripts/: matrixLatex.py  plot.py
src/: App.cpp  Window.cpp  main.cpp
src/App/: App.cpp
src/Core/: Camera.cpp  FontLoader.cpp  FontSystem.cpp
src/Renderer/: Curve.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Primitive.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Text.cpp  Texture.cpp
